# ota-dump

./: .gitignore  Cargo.toml  README.md  build.rs  build_config.json
.github/workflows/: publish.yml  rust.yml
src/: compression.rs  main.rs  payload.rs  zipfile.rs
