[package]
name = "ota-dump"
version = "0.1.2"
edition = "2018"
description = "A tool to dump manifest of Android's OTA package"
license-file = "LICENSE"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binread = "2.1.0"
prost = "0.7.0"
prost-helper = "0.5.0"
prost-types = "0.7.0"
reqwest = {version = "0.11.2", features = ["blocking"]}
serde = "1.0.125"
serde_json = "1.0.64"

[build-dependencies]
serde = "1.0.125"
serde_json = "1.0.64"
prost-build = "0.7.0"
